--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -31,7 +31,7 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="btn-group">
-        <button type="button" class="btn  btn-outline-primary" title="Sign in with Facebook">
+        <button type="button" class="btn  btn-outline-primary" title="Sign in with Facebook" (click)="loginFB()">
           Sign in with
           <i class="fa fa-facebook"></i>
         </button>
@@ -39,13 +39,14 @@
     </div>
     <div class="col-sm-6">
       <div class="btn-group">
-        <button type="button" class="btn  btn-outline-danger" title="Sign in with Google">
+        <button type="button" class="btn  btn-outline-danger" title="Sign in with Google" (click)="loginG()">
           Sign in with
           <i class="fa fa-google-plus"></i>
         </button>
       </div>
     </div>
   </div>
+<!--
   <br/>
   <div class="row">
     <div class="col-sm-6">
@@ -65,6 +66,7 @@
       </div>
     </div>
   </div>
+-->
 </div>
 
 
