--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -38,7 +38,7 @@
 
 <div class="row legisBoundary" *ngIf="congressData">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    Find Legislators:
+    Find Representatives:
   </div>
 
   <div class="address col-xs-12">
