--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,20 +15,19 @@
         </ul>
         <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngbCollapse]="isCollaped">
             <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" [ngClass]="{'active': news}"  routerLink="news" routerLinkActive="active"><i class="fa fa-rss"></i>News</a>
+              </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" [ngClass]="{'active': searchLegislator}"  routerLink="searchLegislator" routerLinkActive="active">
+                    <a class="nav-link" [ngClass]="{'active': circle}"  routerLink="circle" routerLinkActive="active">
                       <i class="fa fa-user"></i>
                       <div>Circle</div>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [ngClass]="{'active': news}"  routerLink="news" routerLinkActive="active"><i class="fa fa-rss"></i>News</a>
+                  <a class="nav-link" [ngClass]="{'active': searchLegislator}"  routerLink="searchLegislator" routerLinkActive="active"><i class="fa fa-search"></i>Find Representatives</a>
                 </li>
-                <!--
-                <li class="nav-item">
-                    <a class="nav-link" [ngClass]="{'active': group}"  routerLink="group" routerLinkActive="active"><i class="fa fa-map-marker"></i> District</a>
-                </li>
-                -->
                 <li class="nav-item">
                     <a class="nav-link" [ngClass]="{'active': request}"  routerLink="request" routerLinkActive="active"><i class="fa fa-link"></i>Connections</a>
                 </li>
