--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -37,13 +37,13 @@
 <div class="content">
 
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4" title="This is a private profile">
           <div class="private-profile-label">
           <span  class="badge badge-pill badge-primary" >
             <span  class="badge badge-pill badge-danger" >
             <i class="fa fa-lock" style="font-size: 25px" aria-hidden="true"></i>
             </span>
-            This is an Private profile
+            <!-- This is an Private profile -->
           </span>
           </div>
         </div><!-- End div .col-sm-4 -->
