--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div>
-                        @{{paramUsername}}
+                        {{paramUsername}}
                     </div>
                     <h5>
                     <!-- CHAMBER-begin -->
@@ -381,7 +381,7 @@
                                         <!-- Main stage area -->
                                         <div class="col-lg-12 cols-item2">
                                             <div id="ActivityCollapse" [ngbCollapse]="isActivityCollapsed">
-                                                <app-post [userId]="profileUserId" [disableNewPost]=true></app-post>
+                                               <app-post [userId]="profileUserId" [disableNewPost]=true></app-post>
                                             </div>
                                             <div id="FollowersCollapse" [ngbCollapse]="isFollowersCollapsed"
                                                  class="widget stick-widget">
