--- a/src/app/components/group/group/group.component.css
+++ b/src/app/components/group/group/group.component.css
@@ -5,11 +5,11 @@
   border: none !important;
   background: none !important;
 }
-.image-upload-container{
+/* .image-upload-container{
   border: 1px solid rgba(0,0,0,0.54);
   border-radius: 5px;
   width:152px;
-}
+} */
 
 body {
   margin-top: 20px;
