--- a/src/app/components/post/postcard/postcard.component.css
+++ b/src/app/components/post/postcard/postcard.component.css
@@ -195,17 +195,17 @@ form button {
 
 
 .delete-image{
-  float: right;
+  /* float: right;
   margin-top: 5px;
-  margin-right: 5px;
+  margin-right: 5px; */
   border: none !important;
   background: none !important;
 }
-.image-upload-container{
+/* .image-upload-container{
   border: 1px solid rgba(0,0,0,0.54);
   border-radius: 5px;
-  width:152px;
-}
+  width:min-content;
+} */
 .image-upload{
   padding: 0px 15px 15px 15px;
 }
@@ -244,3 +244,4 @@ form button {
   margin: 0 !important;
   border-radius: 0px;
 }
+
