--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -19,9 +19,9 @@
   }
 }
 .delete-image{
-    float: right;
+    /* float: right;
     margin-top: 5px;
-    margin-right: 5px;
+    margin-right: 5px; */
     border: none !important;
     background: none !important;
     position: relative;
@@ -29,11 +29,11 @@
     left: 25px;
     font-size: 15px;;
   }
-  .image-upload-container{
+  /* .image-upload-container{
     border: 1px solid rgba(0,0,0,0.54);
     border-radius: 5px;
     width:152px;
-  }
+  } */
 
   .vseparator{
     margin: 5px;
