--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -38,11 +38,11 @@
     Find Representatives:
   </div>
 
-  <div class="address col-xs-12">
-    Address: <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
+  <div class="address col-lg-9 col-md-9 col-sm-9 col-xs-9">
+    <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
   </div>
 
-  <div class="col-xs-12">
+  <div class="col-xs-3">
     <!--
     <button type="button" (click)="loadStateData()" [ngClass]="{ 'btn-legis btn-legis-select': stateData, 'btn-legis btn-secondary': !stateData }">State</button>
     <button type="button"  (click)="loadCongressData()" [ngClass]="{ 'btn-legis btn-legis-select': congressData, 'btn-legis btn-secondary': !congressData  }">Congress</button>
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-  <div class="row legisBoundary">
+  <div [ngClass]="{ 'row legisBoundary': divisions.length > 0, 'row': divisions.length < 1  }">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <ul class="nav">
         <li class="nav-item border-right" *ngFor="let division of divisions">
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div class="row legisBoundary">
+  <div [ngClass]="{ 'row legisBoundary': divisionOffices.length > 0, 'row': divisionOffices < 1  }">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <ul class="nav">
         <li class="nav-item border-right" *ngFor="let divisionOffice of divisionOffices">
