--- a/src/app/components/post/newpost/newpost.component.css
+++ b/src/app/components/post/newpost/newpost.component.css
@@ -150,8 +150,12 @@ form button {
   font-style: initial;
   cursor: pointer;
 }
-
-/* .video-upload-container{
+.image-upload-container{
+  border: 1px solid rgba(0,0,0,0.54);
+  border-radius: 5px;
+  width:152px;
+}
+.video-upload-container{
   border: 1px solid rgba(0,0,0,0.54);
   border-radius: 5px;
   width:min-content;
