--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -43,6 +43,7 @@
             <span  class="badge badge-pill badge-danger" >
             <i class="fa fa-lock" style="font-size: 25px" aria-hidden="true"></i>
             </span>
+            <!-- This is an Private profile -->
           </span>
           </div>
         </div><!-- End div .col-sm-4 -->
@@ -420,6 +421,7 @@
                                                               </div>
                                                             </div>
                                                           </div>
+
                                                     </li>
                                                 </ul>
                                             </div>
