--- a/src/app/components/post/newpost/newpost.component.css
+++ b/src/app/components/post/newpost/newpost.component.css
@@ -136,15 +136,6 @@ form button {
     padding-left:3px;
   }
 }
-.delete-image{
-  /* float: right;
-  margin-top: 5px;
-  margin-right: 5px; */
-  margin-top: 15%;
-  font-size: 35px;
-  border: none !important;
-  background: none !important;
-}
 .char-icon{
   font-size: 18px;
   font-style: initial;
@@ -219,11 +210,12 @@ img {
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1;
   width: 100%;
+  height: 0px;
   transition: .5s ease;
   opacity:0;
   color: white;
   font-size: 20px;
-  padding: 20px;
+  /* padding: 20px; */
   text-align: center;
 }
 
