--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -294,9 +294,9 @@
                     <span class="badge badge-pill badge-primary pointer" (click)="Followers()">Followers &nbsp;<span class="badge badge-light">{{followersCount}}</span></span>
                     <span class="vseparator"></span>
                     <span class="badge badge-pill badge-primary pointer" (click)="Followings()">Following &nbsp;<span class="badge badge-light">{{followingsCount}}</span></span>
-                    <span class="vseparator"></span>
-                    <span *ngIf="!isInCircle" class="badge badge-pill badge-primary pointer" (click)="add2Circle()">Add to Circle<i class="fa fa-star-o"></i></span>
-                    <span *ngIf="isInCircle" class="badge badge-pill badge-primary pointer" (click)="removeFromCircle()">In Circle<i class="fa fa-star-o"></i></span>                    
+                    <span *ngIf="!isSelfProfile" class="vseparator"></span>
+                    <span *ngIf="!isSelfProfile && !isInCircle" class="badge badge-pill badge-primary pointer" (click)="add2Circle()">Add to Circle<i class="fa fa-star-o"></i></span>
+                    <span *ngIf="!isSelfProfile && isInCircle" class="badge badge-pill badge-primary pointer" (click)="removeFromCircle()">In Circle<i class="fa fa-star-o"></i></span>                    
                 </div>
 
 
